# squads-multisig-client

./: AUTHORS  Cargo.toml  README.org  flake.nix
src/: main.rs  newtypes.rs
src/command/: mod.rs  multisig_create.rs  program_config_init.rs
