[package]
name = "squads-multisig-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
clap = { version = "4.5.23", features = ["derive"] }
solana-client = "1.18.26"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
squads-multisig = { git = "https://github.com/Denommus/squads-v4.git", rev = "60d92efa1b0490cb70329cbac0165e550d73a9c7" }
tokio = { version = "1.42.0", features = ["full"] }
